# die-with-me

./: .gitignore  CMakeLists.txt  Package.swift  README.md  index.html
Sources/DieWithMe/: Game.swift  main.swift
Sources/Particles/: Particle.swift  main.swift
assets/sources/: Game.cpp  Screen.cpp  Window.cpp
docs/: README.txt
documentation/: README.txt
include/: CustomColor.h  CustomColors.h  Game.h  Screen.h  Settings.h  Types.h  Window.h
sources/: Game.cpp  Main.cpp  Screen.cpp  Settings.cpp  Window.cpp
